Containers/Kubernetes/config/pod-minimal-secure.yaml
# Simple pod running as non-root
apiVersion: v1
kind: Pod
metadata:
  name: minimal-secure-pod
  labels:
    app: demo
spec:
  securityContext:
    runAsNonRoot: true
    fsGroup: 3000
  containers:
  - name: demo
    image: busybox:1.36
    command: ["sleep", "3600"]
    resources:
      limits:
        cpu: "50m"
        memory: "64Mi"
    securityContext:
      runAsUser: 1000
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop: ["ALL"]
