Containers/Kubernetes/config/podsecuritycontext.yaml
# PodSecurityContext example
apiVersion: v1
kind: Pod
metadata:
  name: secure-context-pod
spec:
  securityContext:
    fsGroup: 2000
    supplementalGroups: [3000]
  containers:
  - name: app
    image: busybox:1.36
    command: ["sleep", "3600"]
    securityContext:
      runAsUser: 1000
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop: ["ALL"]
