Containers/Kubernetes/config/networkpolicy-default-deny.yaml
# Deny all ingress and egress in this namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
